Fix overflow

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -916,7 +916,7 @@ body {
       .show-modal {
         opacity: 1;
         visibility: visible;
-        transform: scale(0.8);
+        transform: scale(1);
         transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
       }    
       .trigger {
